--- a/kiemtra_html_css/tt/trangan.html
+++ b/kiemtra_html_css/tt/trangan.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="../tt/stylett.css">
 	<link rel="shortcut icon"  href="../img/fv.png"/>
+	<link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="bk menu">
