--- a/kiemtra_html_css/index.html
+++ b/kiemtra_html_css/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="shortcut icon" type="image/png" href="img/fv.png"/>
+	<link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="bk menu">
@@ -20,7 +21,7 @@
         <li><a href="tt/yen.htm"l>Yên Tử</a></li>
         </ul>
     </li>
-    <li class="tr"><a href="#">Tin tức</a></li>
+    <li class="tr"><a href="/tt/maytinh.html">Máy Tính</a></li>
     <li class="tr"><a href="#">Đất nước</a></li>
     <li class="tr"><a href="#">Con người</a></li>
     <li class="tr"><a href="#">Cảnh đẹp</a></li>
