--- a/kiemtra_html_css/index.html
+++ b/kiemtra_html_css/index.html
@@ -21,7 +21,7 @@
         <li><a href="tt/yen.htm"l>Yên Tử</a></li>
         </ul>
     </li>
-    <li class="tr"><a href="kiemtra_html_css/tt/chuadau.html">Máy Tính</a></li>
+    <li class="tr"><a href="tt/chuadau.html">Máy Tính</a></li>
     <li class="tr"><a href="#">Đất nước</a></li>
     <li class="tr"><a href="#">Con người</a></li>
     <li class="tr"><a href="#">Cảnh đẹp</a></li>
