--- a/tam_thuc/index.html
+++ b/tam_thuc/index.html
@@ -25,7 +25,20 @@
 			</div>
 	</header>
 	<main>
-		
+		<section class="pro">
+			<div class="intr">
+				<div class="tex-intro">
+					<h2>Định tâm thức kinh doanh</h2>
+					<p>Định tâm thức kinh doanh là khóa đào tạo chất lượng về đàm phán, bán hàng,<br> tiếp thị liên kết Affiliate, quản lý Digital marketing...
+				</div>
+				<div class="bnt">
+				<a class="dk1" href="#">Đăng kí ngay</a>
+				</div>
+			</div>
+			<div class="cove">
+				<img src="img/dtt.jpg" alt="Định tâm thức">
+			</div>
+		</section>
 	</main>
 </body>
 </html>
