--- a/tam_thuc/index.html
+++ b/tam_thuc/index.html
@@ -21,7 +21,7 @@
 			</ul>
 		</nav>
 			<div class="dk">
-				<a class="ven" href="#">Đăng kí ngay</a>
+				<a class="ven" href="https://docs.google.com/forms/d/1q7I8hiDdf70DNwzjZBVtgh1SxZ49V4pOHz6WefjB43A/edit">Đăng kí ngay</a>
 			</div>
 	</header>
 	<main>
@@ -32,7 +32,7 @@
 					<p>Định tâm thức kinh doanh là khóa đào tạo chất lượng về đàm phán, bán hàng,<br> tiếp thị liên kết Affiliate, quản lý Digital marketing...
 				</div>
 				<div class="bnt">
-				<a class="dk1" href="#">Đăng kí ngay</a>
+				<a class="dk1" href="https://docs.google.com/forms/d/1q7I8hiDdf70DNwzjZBVtgh1SxZ49V4pOHz6WefjB43A/edit">Đăng kí ngay</a>
 				</div>
 			</div>
 			<div class="cove">
